adding coin-miners.info stratum pool

--- a/eth-proxy.conf
+++ b/eth-proxy.conf
@@ -47,19 +47,19 @@ MONITORING = False
 MONITORING_EMAIL = "mail@example.com"
 
 # Main pool
-POOL_HOST = "eth-eu.dwarfpool.com"
+POOL_HOST = "eu.coin-miners.info"
 POOL_PORT = 8008
 
 # Failover pool
 POOL_FAILOVER_ENABLE = True
 
-POOL_HOST_FAILOVER1 = "eth-ru.dwarfpool.com"
+POOL_HOST_FAILOVER1 = "us.coin-miners.info"
 POOL_PORT_FAILOVER1 = 8008
 
-POOL_HOST_FAILOVER2 = "eth-us.dwarfpool.com"
-POOL_PORT_FAILOVER2 = 8008
+POOL_HOST_FAILOVER2 = "nicehash.coin-miners.info"
+POOL_PORT_FAILOVER2 = 8015
 
-POOL_HOST_FAILOVER3 = "eth-hk.dwarfpool.com"
+POOL_HOST_FAILOVER3 = "uk1.epool.io"
 POOL_PORT_FAILOVER3 = 8008
 
 
@@ -68,4 +68,4 @@ LOG_TO_FILE = True
 
 # Enable debug
 DEBUG = False
-
+
